--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
+    "require-dev": {
+        "fzaninotto/faker": "^1.8"
+    },
     "config": {
         "preferred-install": {
             "*": "dist"
