Added categories page with description

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,8 @@
 index:
     path: /
     controller: App\Controller\DefaultController::index
+
+# Categories pages
+category:
+    path: /category/{name}
+    controller: App\Controller\CategoryController::category
