--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "php": "^7.1.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "friendsofphp/php-cs-fixer": "^2.14",
     "symfony/asset": "4.2.*",
     "symfony/console": "4.2.*",
     "symfony/debug-pack": "^1.0",
@@ -45,7 +46,8 @@
   "scripts": {
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+      "assets:install %PUBLIC_DIR%": "symfony-cmd",
+      "cs-fix": "php-cs-fixer fix --allow-risky=yes"
     },
     "post-install-cmd": [
       "@auto-scripts"
