--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "php": "^7.1.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "friendsofphp/php-cs-fixer": "^2.14",
     "symfony/asset": "4.2.*",
     "symfony/console": "4.2.*",
     "symfony/debug-pack": "^1.0",
@@ -17,7 +16,8 @@
   },
   "require-dev": {
     "fzaninotto/faker": "^1.8",
-    "symfony/web-server-bundle": "4.2.*"
+    "symfony/web-server-bundle": "4.2.*",
+    "friendsofphp/php-cs-fixer": "^2.14"
   },
   "config": {
     "preferred-install": {
@@ -44,10 +44,10 @@
     "symfony/polyfill-php56": "*"
   },
   "scripts": {
+    "cs-fix": "php-cs-fixer fix --allow-risky=yes",
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd",
-      "cs-fix": "php-cs-fixer fix --allow-risky=yes"
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
     "post-install-cmd": [
       "@auto-scripts"
